--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="te">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kalyan Max – Best Online Matka App</title>
+<title>Munaf Learning – Stock Market Education (Telugu)</title>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<!-- ================= META PIXEL CODE ================= -->
+<!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -17,426 +15,153 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1393511835037064');
+fbq('init', '1561378755154820');
 fbq('track', 'PageView');
 </script>
 <noscript>
 <img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1393511835037064&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=1561378755154820&ev=PageView&noscript=1"/>
 </noscript>
-<!-- =============== END META PIXEL ================= -->
-
+<!-- End Meta Pixel Code -->
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-
-:root{
-    --primary:#5b2cff;
-    --secondary:#9b00ff;
-    --dark:#1f2937;
-    --bg:#f4f6ff;
-}
-
 body{
-    font-family:'Segoe UI',sans-serif;
-    background:
-        radial-gradient(circle at top left,#dbe1ff 0%,transparent 40%),
-        radial-gradient(circle at bottom right,#ecd6ff 0%,transparent 45%),
-        var(--bg);
-    color:var(--dark);
-    padding-bottom:130px;
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    background:#f6f8fb;
+    color:#222;
 }
 
 .container{
-    max-width:1200px;
+    max-width:900px;
     margin:auto;
-    padding:0 16px;
+    padding:20px;
 }
 
-/* ===== NEWS TICKER ===== */
-.news-ticker{
-    width:100%;
-    background:linear-gradient(90deg,#111,#1f2937);
+.hero{
+    background:#0f172a;
     color:#fff;
-    overflow:hidden;
-    position:sticky;
-    top:0;
-    z-index:1000;
-}
-
-.ticker-wrap{
-    width:100%;
-    overflow:hidden;
-}
-
-.ticker{
-    display:inline-block;
-    white-space:nowrap;
-    padding:10px 0;
-    font-size:0.95rem;
-    font-weight:600;
-    animation:tickerMove 18s linear infinite;
-}
-
-@keyframes tickerMove{
-    0%{transform:translateX(100%)}
-    100%{transform:translateX(-100%)}
-}
-
-/* Mobile optimization */
-@media(max-width:600px){
-    .ticker{
-        font-size:0.85rem;
-        animation-duration:14s;
-    }
-}
-
-
-/* HEADER */
-header{
+    padding:40px 20px;
+    border-radius:12px;
     text-align:center;
-    padding:10px 15px 30px;
 }
 
-.logo-img{
-    width:120px;
-    height:120px;
-    margin:auto auto 15px;
-}
-.logo-img img{width:100%;height:100%;object-fit:contain}
-
-header h1{
-    font-size:2.6rem;
-    color:var(--primary);
-}
-header p{
-    font-size:1rem;
-    margin:12px 0 28px;
+.brand{
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom:10px;
+    letter-spacing:1px;
 }
 
-/* BUTTONS */
-.hero-row{
-    display:flex;
-    justify-content:center;
-    gap:14px;
-    margin-top:15px;
-    flex-wrap:wrap;
+.hero h1{
+    margin-bottom:10px;
+    font-size:28px;
+}
+
+.hero p{
+    font-size:16px;
+    opacity:0.9;
 }
 
 .btn{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:8px;
-    color:#fff;
+    display:inline-block;
+    margin-top:20px;
+    padding:14px 28px;
+    background:#22c55e;
+    color:#000;
     text-decoration:none;
-    font-weight:700;
-    border-radius:50px;
-}
-
-.big-download{
-    background:linear-gradient(45deg,var(--primary),var(--secondary));
-    padding:18px 40px;
-    font-size:1.2rem;
-    animation:pulse 1.8s infinite;
-}
-
-.top-small{
-    padding:14px 26px;
-    font-size:1rem;
-}
-.btn-whatsapp{background:#25D366}
-.btn-call{background:#2563eb}
-
-@keyframes pulse{
-    0%{transform:scale(1)}
-    50%{transform:scale(1.06)}
-    100%{transform:scale(1)}
-}
-
-/* SECTIONS */
-section{padding:5px 0}
-
-.section-title{
-    text-align:center;
-    font-size:1.4rem;
-    color:#666;
-    margin-bottom:15px;
-}
-
-/* SCREENSHOT */
-.single-shot{text-align:center}
-.single-shot img{
-    max-width:360px;
-    width:100%;
+    font-weight:bold;
     border-radius:30px;
-    box-shadow:0 25px 60px rgba(0,0,0,.3);
 }
 
-/* ABOUT */
-.about-box{
-    background:linear-gradient(135deg,#2b0a5a,#4c1d95);
-    padding:30px 22px;
-    border-radius:22px;
-    color:#fff;
+.section{
+    margin-top:30px;
+    background:#fff;
+    padding:25px;
+    border-radius:12px;
 }
 
-.section-subtext{
-    text-align:center;
-    color:#ddd;
-    margin-bottom:20px;
+.section h2{
+    margin-top:0;
 }
 
-/* WHY POINTS */
-.why-points{
-    list-style:none;
-    display:grid;
-    gap:14px;
-}
-.why-points li{
-    background:#1a1a1a;
-    padding:14px 16px;
-    border-radius:14px;
-    display:flex;
-    align-items:center;
-    gap:12px;
-}
-.why-points i{color:#25D366;font-size:1.2rem}
-
-/* RATES */
-.rates-grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:16px;
-}
-.rate-card{
-    background:linear-gradient(135deg,var(--primary),var(--secondary));
-    color:#fff;
-    padding:24px;
-    border-radius:16px;
-    text-align:center;
-    font-weight:600;
+ul{
+    padding-left:20px;
 }
 
-/* GAME LIST */
-.game-list{
-    list-style:none;
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:12px;
-}
-.game-list li{
-    background:#1a1a1a;
-    color:#fff;
-    padding:12px 14px;
-    border-radius:14px;
-    display:flex;
-    gap:10px;
-    align-items:center;
-}
-.game-list i{font-size:.6rem;color:#25D366}
-
-.game-head{
-    grid-column:1/-1;
-    text-align:center;
-    color:#ccc;
-    font-weight:700;
-    margin:10px 0;
+ul li{
+    margin-bottom:8px;
 }
 
-/* DISCLAIMER */
-.disclaimer-section{
-    background:#111;
-    color:#bbb;
-    font-size:.9rem;
+.footer{
+    margin-top:25px;
+    font-size:13px;
+    color:#555;
     line-height:1.6;
-    text-align:center;
-    padding:25px 15px;
-}
-.disclaimer-section strong{color:#fff}
-
-/* FOOTER */
-footer{
-    background:#111827;
-    color:#ccc;
-    text-align:center;
-    padding:30px 15px;
-}
-
-/* BOTTOM CTA */
-.bottom-download{
-    position:fixed;
-    bottom:15px;
-    left:50%;
-    transform:translateX(-50%);
-    width:calc(100% - 40px);
-    max-width:460px;
-    background:linear-gradient(45deg,var(--primary),var(--secondary));
-    color:#fff;
-    text-decoration:none;
-    padding:15px;
-    border-radius:18px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    gap:10px;
-    font-size:1.15rem;
-    font-weight:700;
-    animation:floatBar 2s infinite;
-    z-index:999;
-}
-
-@keyframes floatBar{
-    0%,100%{transform:translate(-50%,0)}
-    50%{transform:translate(-50%,-8px)}
-}
-
-/* MOBILE */
-@media(max-width:300px){
-    header h1{font-size:2.2rem}
-    .big-download{width:100%}
-    .top-small{width:100%}
-    .hero-row{flex-direction:column}
-    .game-list{grid-template-columns:1fr}
 }
 </style>
 </head>
 
 <body>
 
-<!-- ===== NEWS TICKER ===== -->
-<div class="news-ticker">
-    <div class="ticker-wrap">
-        <div class="ticker">
-            🔥 Welcome to Kalyan Max • India's No.1 Satka Matka Online Play App • Safe & Secure
-        </div>
-    </div>
-</div>
-<!-- ===== END NEWS TICKER ===== -->
+<div class="container">
 
+    <!-- HERO -->
+    <div class="hero">
+        <div class="brand">Munaf Learning</div>
+        <h1>స్టాక్ మార్కెట్ నేర్చుకోండి – సరైన మార్గంలో</h1>
+        <p>
+            Munaf Learning ద్వారా స్టాక్ మార్కెట్‌ను బేసిక్ నుండి అడ్వాన్స్ వరకు
+            అర్థం చేసుకోవడానికి మా టెలిగ్రామ్ లెర్నింగ్ ఛానల్‌లో చేరండి.
+        </p>
 
-<header>
-    <div class="logo-img">
-        <img src="img/logo.png" alt="Kalyan Max Logo">
-    </div>
-    <h1>Kalyan Max</h1>
-    <p>Fast Results • Trusted Charts • Secure App</p>
-
-    <div class="hero-row">
-        <a href="app/kalyan-max.apk" class="btn big-download">
-            <i class="fas fa-download"></i> Download App
+        <a class="btn"
+           href="https://t.me/+Y10n3kPmHUxiM2Q1"
+           target="_blank"
+           onclick="fbq('track','Lead');">
+            టెలిగ్రామ్ ఛానల్‌లో చేరండి
         </a>
     </div>
 
-    <div class="hero-row">
-        <a href="https://wa.me/917357508313" class="btn top-small btn-whatsapp">
-            <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-        <a href="tel:+917357508313" class="btn top-small btn-call">
-            <i class="fas fa-phone"></i> Call
-        </a>
+    <!-- WHAT YOU GET -->
+    <div class="section">
+        <h2>మీకు ఏమి లభిస్తుంది?</h2>
+        <ul>
+            <li>స్టాక్ మార్కెట్ బేసిక్స్</li>
+            <li>చార్ట్ రీడింగ్ మరియు మార్కెట్ అవగాహన</li>
+            <li>రిస్క్ మేనేజ్‌మెంట్ కాన్సెప్ట్స్</li>
+            <li>డైలీ మార్కెట్ లెర్నింగ్ అప్డేట్స్</li>
+        </ul>
     </div>
-</header>
 
-<section>
-<div class="container">
-    <div class="single-shot">
-        <img src="img/screen.jpg">
+    <!-- WHO SHOULD JOIN -->
+    <div class="section">
+        <h2>ఎవరికి ఉపయోగపడుతుంది?</h2>
+        <ul>
+            <li>స్టాక్ మార్కెట్ నేర్చుకోవాలనుకునే వారు</li>
+            <li>బిగినర్స్</li>
+            <li>మార్కెట్‌ను సరిగ్గా అర్థం చేసుకోవాలనుకునే వారు</li>
+        </ul>
     </div>
-</div>
-</section>
 
-<section>
-<div class="container">
-<div class="about-box">
-    <h2 class="section-title">Why Kalyan Max?</h2>
-    <p class="section-subtext"><b>Fast, secure & trusted Matka platform</b></p>
-
-    <ul class="why-points">
-        <li><i class="fas fa-bolt"></i> Fast Deposit & Withdrawal</li>
-        <li><i class="fas fa-wallet"></i> Min Deposit ₹300 | Withdrawal ₹1000</li>
-        <li><i class="fas fa-headset"></i> 24×7 Customer Support</li>
-        <li><i class="fas fa-shield-alt"></i> 100% Secure Platform</li>
-    </ul>
-</div>
-</div>
-</section>
-
-<section>
-<div class="container">
-<h2 class="section-title">Game Rates</h2>
-<div class="rates-grid">
-    <div class="rate-card">Single Digit<br>₹10 → ₹95</div>
-    <div class="rate-card">Jodi Digit<br>₹10 → ₹950</div>
-    <div class="rate-card">Single Pana<br>₹10 → ₹1500</div>
-    <div class="rate-card">Double Pana<br>₹10 → ₹3000</div>
-    <div class="rate-card">Triple Pana<br>₹10 → ₹7000</div>
-    <div class="rate-card">Full Sangam<br>₹10 → ₹100000</div>
-</div>
-</div>
-</section>
-
-<section class="game-list-section">
-    <div class="container">
-        <div class="about-box">
-            <h2 class="section-title">Check Game List</h2>
-
-            <ul class="game-list">
-                <!-- MORNING / DAY / NIGHT -->
-                <li><i class="fas fa-circle"></i> SRIDEVI MORNING</li>
-                <li><i class="fas fa-circle"></i> KARNATAKA DAY</li>
-                <li><i class="fas fa-circle"></i> MILAN MORNING</li>
-                <li><i class="fas fa-circle"></i> KALYAN MORNING</li>
-                <li><i class="fas fa-circle"></i> MADHUR MORNING</li>
-                <li><i class="fas fa-circle"></i> SRIDEVI</li>
-                <li><i class="fas fa-circle"></i> TIME BAZAR</li>
-                <li><i class="fas fa-circle"></i> MADHUR DAY</li>
-                <li><i class="fas fa-circle"></i> MILAN DAY</li>
-                <li><i class="fas fa-circle"></i> RAJDHANI DAY</li>
-                <li><i class="fas fa-circle"></i> SUPREME DAY</li>
-                <li><i class="fas fa-circle"></i> KALYAN</li>
-                <li><i class="fas fa-circle"></i> KARNATAKA NIGHT</li>
-                <li><i class="fas fa-circle"></i> SRIDEVI NIGHT</li>
-                <li><i class="fas fa-circle"></i> MADHUR NIGHT</li>
-                <li><i class="fas fa-circle"></i> SUPREME NIGHT</li>
-                <li><i class="fas fa-circle"></i> MILAN NIGHT</li>
-                <li><i class="fas fa-circle"></i> KALYAN NIGHT</li>
-                <li><i class="fas fa-circle"></i> RAJDHANI NIGHT</li>
-                <li><i class="fas fa-circle"></i> MAIN BAZAR</li>
-
-                <!-- GALI / DESAWAR -->
-                <li class="game-head">Gali / Desawar Games</li>
-                <li><i class="fas fa-circle"></i> DESAWAR</li>
-                <li><i class="fas fa-circle"></i> SHRI GANESH</li>
-                <li><i class="fas fa-circle"></i> DELHI BAZAR</li>
-                <li><i class="fas fa-circle"></i> FARIDABAD</li>
-                <li><i class="fas fa-circle"></i> GAZIABAD</li>
-                <li><i class="fas fa-circle"></i> GALI</li>
-            </ul>
-        </div>
+    <!-- TRUST -->
+    <div class="section">
+        <h2>మా లక్ష్యం</h2>
+        <p>
+            Munaf Learning లో మేము స్టాక్ మార్కెట్‌పై విద్యా మరియు అవగాహన కంటెంట్ మాత్రమే
+            అందిస్తాము. మా లక్ష్యం మీకు సరైన లెర్నింగ్ ఇవ్వడం.
+        </p>
     </div>
-</section>
 
+    <!-- DISCLAIMER -->
+    <div class="section footer">
+        <strong>డిస్క్లైమర్ :</strong><br>
+        ఈ కంటెంట్ పూర్తిగా విద్యా (Educational) ఉద్దేశ్యాల కోసం మాత్రమే.
+        మేము ఎలాంటి ఇన్వెస్ట్‌మెంట్ సలహా ఇవ్వము.
+        పెట్టుబడి చేసే ముందు మీ స్వంత పరిశీలన చేయండి.
+    </div>
 
-<section class="disclaimer-section">
-    <p>
-        <strong>Disclaimer:</strong> </br>This website is intended for users who are 18 years of age or older.
-        Kalyan Max is an online gaming platform meant for entertainment purposes only.
-        We do not promote or encourage any form of illegal gambling.
-        Users are requested to follow and comply with their respective local laws before participating.
-        We are not responsible for any financial loss or legal issues arising from the use of this website.
-        Please play responsibly and at your own risk.
-    </p>
-</section>
-
-
-<footer>
-<p>© 2026 Kalyan Max. All Rights Reserved.</p>
-</footer>
-
-<a href="app/kalyan-max.apk" class="bottom-download">
-    <i class="fas fa-download"></i> Download App
-</a>
+</div>
 
 </body>
 </html>
