--- a/index.html
+++ b/index.html
@@ -1,178 +1,199 @@
+<!DOCTYPE html>
+<html lang="te">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Munaf Learning</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Munaf Learning – Official</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
-
-  <script async src="https://connect.facebook.net/en_US/fbevents.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Meta Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1561378755154820');
-  fbq('track', 'PageView');
-  </script>
-
-  <noscript>
-    <img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1561378755154820&ev=PageView&noscript=1"/>
-  </noscript>
-  <!-- End Meta Pixel Code -->
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1561378755154820');
+fbq('track', 'PageView');
+</script>
+<noscript>
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1561378755154820&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
 
 <style>
-body{font-family:"Ubuntu",sans-serif;}
-@keyframes bgShift{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-.animated-bg{background:linear-gradient(90deg,#fff7ed 0%,#dff7ea 30%,#fff1f2 60%,#f7f7ff 100%);background-size:200% 200%;animation:bgShift 12s ease infinite;}
-@keyframes floaty{0%{transform:translateY(0)}50%{transform:translateY(-8px) rotate(-1deg)}100%{transform:translateY(0)}}
-.floaty{animation:floaty 3.5s ease-in-out infinite;}
-@keyframes popIn{0%{transform:scale(.6);opacity:0;filter:blur(6px)}60%{transform:scale(1.05);opacity:1;filter:blur(0)}100%{transform:scale(1)}}
-.pop-in{animation:popIn 700ms cubic-bezier(.2,.9,.3,1) both;}
-.cta-pulse{transition:transform .15s ease,box-shadow .15s ease;}
-.cta-pulse:hover{transform:translateY(-4px) scale(1.02);box-shadow:0 18px 40px rgba(16,185,129,.18);}
-.cta-press:active{transform:translateY(1px) scale(.995);}
-.glow-text{text-shadow:0 8px 24px rgba(255,59,48,.08);}
-.sparkle{position:absolute;width:10px;height:10px;border-radius:50%;background:radial-gradient(circle at 30% 30%,rgba(255,255,255,.95),rgba(255,255,255,.2));opacity:0;filter:blur(.6px);animation:sparkleAnim 3.5s linear infinite;}
-@keyframes sparkleAnim{0%{transform:translateY(0) scale(.6);opacity:0}10%{opacity:1}60%{opacity:.6;transform:translateY(-60px) scale(1.1)}100%{opacity:0;transform:translateY(-120px) scale(.8)}}
-.flip{perspective:400px;}
-.flip .digit{display:inline-block;transform-origin:center;transition:transform .35s cubic-bezier(.2,.9,.3,1);}
-.flip .digit.flip-animate{transform:rotateX(-180deg);}
-@media(max-width:420px){.count-box{padding:.5rem .75rem}.w-max-hero{width:120px;height:120px}}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif;}
+body{
+min-height:100vh;display:flex;justify-content:center;align-items:center;
+padding:18px;color:#fff;background:#0b0f14;overflow-x:hidden;
+}
+body::before{
+content:"";position:fixed;inset:0;
+background:
+radial-gradient(circle at 20% 20%, rgba(0,140,255,0.12), transparent 40%),
+radial-gradient(circle at 80% 30%, rgba(0,255,180,0.10), transparent 45%),
+radial-gradient(circle at 50% 80%, rgba(255,200,0,0.10), transparent 40%),
+linear-gradient(135deg, rgba(255,255,255,0.05) 1px, transparent 1px),
+linear-gradient(45deg, rgba(255,255,255,0.05) 1px, transparent 1px);
+background-size:auto,auto,auto,40px 40px,40px 40px;
+opacity:.9;z-index:-2;
+}
+.card{
+width:100%;max-width:420px;background:rgba(20,20,20,.88);
+border:1px solid rgba(255,255,255,.12);border-radius:22px;
+padding:22px 18px 18px;box-shadow:0 10px 40px rgba(0,0,0,.55);
+backdrop-filter:blur(12px);text-align:center;
+}
+.avatarWrap{
+width:120px;height:120px;margin:0 auto 14px;border-radius:50%;
+padding:4px;background:linear-gradient(135deg,#ffcc00,#ff9900);
+display:flex;align-items:center;justify-content:center;
+}
+.avatar{
+width:100%;height:100%;border-radius:50%;object-fit:cover;
+border:2px solid rgba(0,0,0,.6);background:#111;
+}
+.title{
+font-size:36px;font-weight:800;color:#ffcc00;line-height:1.05;margin-top:6px;
+text-shadow:0 2px 12px rgba(0,0,0,.6);
+}
+.subtitle{
+margin:10px auto 14px;display:flex;align-items:center;justify-content:center;
+gap:10px;font-size:15px;opacity:.92;
+}
+.pills{
+display:flex;justify-content:center;gap:12px;margin:8px 0 14px;flex-wrap:wrap;
+}
+.pill{
+background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.12);
+padding:10px 14px;border-radius:14px;font-weight:700;font-size:15px;min-width:140px;
+}
+.timerBox{
+margin:12px 0 16px;padding:12px 14px;border-radius:16px;
+background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.10);
+font-size:15px;font-weight:700;line-height:1.4;
+}
+.timerBox span{color:#00d1ff;font-weight:900;font-size:18px;}
+.tgBtn{width:100%;display:flex;justify-content:center;margin:10px 0 18px;}
+.tgBtn button{
+width:100%;border:none;cursor:pointer;padding:16px 16px;border-radius:16px;
+font-size:20px;font-weight:900;color:#fff;background:#2AABEE;
+display:flex;align-items:center;justify-content:center;gap:10px;
+animation: hardBlink .55s infinite alternate, pulseGlow .8s infinite;
+}
+.tgBtn button:active{transform:scale(.98);}
+.tgIcon{width:26px;height:26px;display:inline-block;}
+@keyframes hardBlink{0%{filter:brightness(1);opacity:1;}100%{filter:brightness(1.7);opacity:.7;}}
+@keyframes pulseGlow{0%{box-shadow:0 0 0 rgba(42,171,238,0);}50%{box-shadow:0 0 28px rgba(42,171,238,.65);}100%{box-shadow:0 0 0 rgba(42,171,238,0);}}
+.features{margin-top:10px;display:flex;flex-direction:column;gap:14px;}
+.feature{
+display:flex;align-items:center;gap:12px;padding:16px 14px;border-radius:16px;
+background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.10);
+font-size:16px;font-weight:700;text-align:left;
+}
+.ok{
+width:26px;height:26px;border-radius:50%;background:#00ff99;color:#001b10;
+display:flex;align-items:center;justify-content:center;font-weight:900;font-size:16px;
+flex-shrink:0;box-shadow:0 0 18px rgba(0,255,153,.35);
+}
+.note{margin-top:12px;font-size:13px;opacity:.75;}
+.footerText{margin-top:16px;font-size:12px;opacity:.7;line-height:1.4;}
 </style>
 </head>
 
-<body class="min-h-screen flex items-center justify-center animated-bg">
+<body>
 
-<main class="w-full max-w-md p-5">
-<section class="relative bg-white/90 backdrop-blur rounded-3xl shadow-2xl border border-gray-100 overflow-hidden pop-in">
+<div class="card">
 
-<div aria-hidden="true" class="absolute inset-0 pointer-events-none">
-  <div class="sparkle" style="left:12%;top:14%"></div>
-  <div class="sparkle" style="left:20%;top:6%"></div>
-  <div class="sparkle" style="left:50%;top:20%"></div>
-  <div class="sparkle" style="left:86%;top:8%"></div>
-</div>
-
-<div class="px-6 pt-5">
-  <div class="text-xs font-extrabold tracking-widest text-red-600 uppercase text-center">
-    OFFICIAL LEARNING COMMUNITY
-  </div>
-</div>
-
-<div class="p-6 flex flex-col items-center text-center">
-
-  <div class="relative">
-    <img src="radika.jpg" class="w-40 h-40 object-cover rounded-full shadow-2xl floaty w-max-hero">
+  <div class="avatarWrap">
+    <img class="avatar" src="profile.jpg" alt="Munaf Learning">
   </div>
 
-  <h1 class="mt-5 text-lg md:text-xl font-extrabold text-gray-800 glow-text">
-    Learn Stock Market With
-  </h1>
-
-  <div class="mt-3">
-    <span class="bg-gradient-to-r from-yellow-400 via-orange-400 to-red-500 text-white font-black px-4 py-2 rounded-full">
-      Munaf Learning
-    </span>
+  <div class="title">
+    Munaf<br>Learning™
   </div>
 
-  <div class="mt-6 w-full">
-    <a href="https://t.me/+Y10n3kPmHUxiM2Q1">
-      <button id="joinBtn"
-        class="w-full cta-pulse cta-press bg-emerald-500/95 hover:bg-emerald-600 text-white font-extrabold py-3 rounded-full shadow-lg">
-        JOIN TELEGRAM CHANNEL
-      </button>
-    </a>
+  <div class="subtitle">
+    <span>✅</span>
+    <span>వేల మంది లెర్నర్స్ నమ్ముతున్న కమ్యూనిటీ</span>
   </div>
 
-  <div class="mt-4 text-xs uppercase text-gray-500 font-semibold">
-    Educational & Learning Content Only
+  <div class="pills">
+    <div class="pill">24/7 లెర్నింగ్ అప్డేట్స్</div>
+    <div class="pill">ఉచితంగా చేరండి</div>
   </div>
 
-  <div class="mt-6">
-    <div class="text-2xl font-extrabold text-red-500">Hurry Up!</div>
+  <div class="timerBox">
+    <span id="timer">10</span> సెకండ్లలో టెలిగ్రామ్ తెరుచుకుంటుంది...<br>
+    ఓపెన్ కాకపోతే కింద బటన్ క్లిక్ చేయండి 👇
   </div>
 
-  <div class="mt-4 flex items-center justify-center gap-3">
-    <div class="count-box bg-gray-50 rounded-xl px-5 py-3 text-center shadow-sm">
-      <div class="text-[10px] font-semibold text-gray-400">HRS</div>
-      <div id="hrs" class="text-2xl font-extrabold flip"><span class="digit">00</span></div>
+  <div class="tgBtn">
+    <button id="joinBtn" type="button">
+      <svg class="tgIcon" viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="120" cy="120" r="120" fill="white" opacity="0.15"/>
+        <path d="M200.5 63.4 171.8 196c-2.2 9.4-8.2 11.7-16.6 7.3l-46-33.9-22.2 21.4c-2.5 2.5-4.6 4.6-9.4 4.6l3.4-48.6 88.5-79.9c3.9-3.4-.9-5.3-6-1.9l-109.4 68.9-47.1-14.7c-10.2-3.2-10.4-10.2 2.1-15.1l184.1-71c8.5-3.1 15.9 2.1 13.1 15.3z"
+        fill="white"/>
+      </svg>
+      టెలిగ్రామ్‌లో చేరండి
+    </button>
+  </div>
+
+  <div class="features">
+    <div class="feature">
+      <div class="ok">✓</div>
+      <div>మార్కెట్ అవగాహన & లెర్నింగ్ చర్చలు</div>
     </div>
-    <div class="count-box bg-gray-50 rounded-xl px-5 py-3 text-center shadow-sm">
-      <div class="text-[10px] font-semibold text-gray-400">MINS</div>
-      <div id="mins" class="text-2xl font-extrabold flip"><span class="digit">00</span></div>
+    <div class="feature">
+      <div class="ok">✓</div>
+      <div>అనుభవజ్ఞుల నుంచి నేర్చుకోండి</div>
     </div>
-    <div class="count-box bg-gray-50 rounded-xl px-5 py-3 text-center shadow-sm">
-      <div class="text-[10px] font-semibold text-gray-400">SECS</div>
-      <div id="secs" class="text-2xl font-extrabold flip"><span class="digit">08</span></div>
+    <div class="feature">
+      <div class="ok">✓</div>
+      <div>ప్రాక్టికల్ లెర్నింగ్ స్ట్రాటజీలు</div>
     </div>
   </div>
 
-  <div id="doneMsg" class="mt-3 text-sm text-gray-400 opacity-0 transition-opacity">
-    Time expired — Hurry Back!
+  <div class="note">
+    ⚠️ గమనిక: నిజంగా నేర్చుకోవాలనుకునే వారు మాత్రమే జాయిన్ అవ్వండి.
+  </div>
+
+  <div class="footerText">
+    ఈ ఛానల్ పూర్తిగా విద్యా (Educational) ఉద్దేశ్యాల కోసం మాత్రమే.
   </div>
 
 </div>
-</section>
-</main>
 
 <script>
-(function(){
+const TG_LINK = "https://t.me/+Y10n3kPmHUxiM2Q1";
 
-let totalSeconds = 8;
-
-const hrsEl=document.getElementById('hrs');
-const minsEl=document.getElementById('mins');
-const secsEl=document.getElementById('secs');
-const doneMsg=document.getElementById('doneMsg');
-const joinBtn=document.getElementById('joinBtn');
-
-function setText(el,value){
-const digit=el.querySelector('.digit');
-digit.classList.add('flip-animate');
-setTimeout(()=>{digit.textContent=value;digit.classList.remove('flip-animate');},180);
+function openTelegramWithLead(){
+  try{
+    if(typeof fbq === "function"){
+      fbq('track','Lead');
+    }
+  }catch(e){}
+  window.open(TG_LINK,"_blank");
 }
 
-function render(){
-const hrs=Math.floor(totalSeconds/3600);
-const mins=Math.floor((totalSeconds%3600)/60);
-const secs=totalSeconds%60;
-setText(hrsEl,String(hrs).padStart(2,'0'));
-setText(minsEl,String(mins).padStart(2,'0'));
-setText(secsEl,String(secs).padStart(2,'0'));
-}
+const joinBtn=document.getElementById("joinBtn");
+joinBtn.addEventListener("click",openTelegramWithLead);
 
-render();
+let timeLeft=10;
+const timerEl=document.getElementById("timer");
 
-const tick=setInterval(()=>{
-if(totalSeconds<=0){
-clearInterval(tick);
-doneMsg.style.opacity='1';
-joinBtn.classList.add('animate-pulse');
-setTimeout(()=>{
-window.location.href='https://t.me/+Y10n3kPmHUxiM2Q1';
-},800);
-return;
+const interval=setInterval(()=>{
+timeLeft--;
+timerEl.textContent=timeLeft;
+if(timeLeft<=0){
+clearInterval(interval);
+openTelegramWithLead();
 }
-totalSeconds--;
-render();
 },1000);
-
-joinBtn.addEventListener('click',()=>{
-fbq('track','Lead');
-window.location.href='https://t.me/+Y10n3kPmHUxiM2Q1';
-});
-
-})();
 </script>
 
 </body>
+</html>
